--- a/src/pages/PlaceOrder/PlaceOrder.css
+++ b/src/pages/PlaceOrder/PlaceOrder.css
@@ -39,3 +39,10 @@
 .place-order .cart-total button {
     margin-top: 30px;
 }
+
+@media (max-width:750px) {
+    .place-order {
+        display: flex;
+        flex-direction: column;
+    }
+}
