--- a/src/pages/verify/Verify.css
+++ b/src/pages/verify/Verify.css
@@ -8,7 +8,7 @@
     height: 100px;
     place-self: center;
     border: 5px solid #bdbdbd;
-    border-top-color: tomato;
+    border-top-color: gray;
     border-radius: 50%;
     animation: rotate 1s infinite;
 }
