--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,10 @@
 .header {
     height: 34vw;
     margin: 30px auto;
-    background: url('/header_img.png') no-repeat;
+    background: linear-gradient(135deg, #c0c0c0, #e6e6e6);
     background-size: contain;
     position: relative;
+    border-radius: 20px;
 }
 
 .header-contents {
@@ -20,12 +21,12 @@
 
 .header-contents h2 {
     font-weight: 500;
-    color: white;
+    color: beige;
     font-size: max(4.5vw,22px);
 }
 
 .header-contents p {
-    color: white;
+    color: beige;
     font-size: 1vw;
 }
 
@@ -58,3 +59,4 @@
         padding: 2vw 4vw;
     }
 }
+
