--- a/src/components/LoginPopup/LoginPopup.css
+++ b/src/components/LoginPopup/LoginPopup.css
@@ -51,7 +51,7 @@
     padding: 10px;
     border-radius: 4px;
     color: white;
-    background-color: tomato;
+    background-color: gray;
     font-size: 15px;
     cursor: pointer;
 }
@@ -68,7 +68,7 @@
 }
 
 .login-popup p span {
-    color: tomato;
+    color: gray;
     font-weight: 500;
     cursor: pointer;
 }
