--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,6 +5,8 @@
     align-items: center;
 }
 
+
+
 .navbar .logo {
     width: 150px;
 }
@@ -27,7 +29,7 @@
     background: transparent;
     font-size: 16px;
     color: #49557e;
-    border: 1px solid tomato;
+    border: 1px solid gray;
     padding: 10px 30px;
     border-radius: 50px;
     cursor: pointer;
@@ -55,7 +57,7 @@
     position: absolute;
     min-width: 10px;
     min-height: 10px;
-    background-color: tomato;
+    background-color: gray;
     border-radius: 5px;
     top: -8px;
     right: -8px;
@@ -70,16 +72,17 @@
     display: none;
     right: 0;
     z-index: 1;
+    background-color: white;
 }
 
 .navbar-profile:hover .nav-profile-dropdown {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    background-color: #fff2ef;
+    background-color: #e6e6e6;
     padding: 12px 25px;
     border-radius: 4px;
-    border: 1px solid tomato;
+    border: 1px solid gray;
     outline: 2px solid white;
     list-style: none;
 }
@@ -96,7 +99,7 @@
 }
 
 .nav-profile-dropdown li:hover {
-    color: tomato;
+    color: gray;
 }
 
 @media (max-width:1050px) {
@@ -144,6 +147,10 @@
         padding: 7px 20px;
         font-size: 15px;
     }
+}
+
+.navbar .logo {
+    color: gray;
 }
 
 @media (max-width:750px) {
