--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -56,7 +56,7 @@
 .cart-total button {
     border: none;
     color: white;
-    background-color: tomato;
+    background-color: gray;
     width: max(15vw,200px);
     padding: 12px 0px;
     border-radius: 4px;
