--- a/src/pages/MyOrders/MyOrders.css
+++ b/src/pages/MyOrders/MyOrders.css
@@ -1,5 +1,6 @@
 .my-orders {
     margin: 50px 0px;
+    min-height:60vh;
 }
 
 .my-orders .container {
@@ -17,7 +18,7 @@
     font-size: 14px;
     padding: 10px 20px;
     color: #454545;
-    border: 1px solid tomato;
+    border: 1px solid gray;
 }
 
 .my-orders-order img {
@@ -25,7 +26,7 @@
 }
 
 .my-orders-order b span {
-    color: tomato;
+    color: gray;
 }
 
 .my-orders-order b p {
