--- a/src/pages/PlaceOrder/PlaceOrder.css
+++ b/src/pages/PlaceOrder/PlaceOrder.css
@@ -23,7 +23,7 @@
     padding: 10px;
     border: 1px solid #c5c5c5;
     border-radius: 4px;
-    outline-color: tomato;
+    outline-color: gray;
 }
 
 .multi-fields {
